# DectrisHdf5

./: .gitignore  CMakeLists.txt  README.md
.ci/: jenkins_build_script.sh  pack.sh  satiate.sh
cmake/: DectrisHdf5Config.cmake.in  DectrisHdf5DebugConfig.cmake.in  cmake_uninstall.cmake.in
config/: pack.sh  satiate.sh  satiate.sh~
hdf5-1.8.11/: CMakeLists.txt
hdf5-1.8.11/c++/: CMakeLists.txt
hdf5-1.8.11/c++/src/: CMakeLists.txt
hdf5-1.8.11/config/cmake/: HDFMacros.cmake
hdf5-1.8.11/hl/src/: CMakeLists.txt
hdf5-1.8.11/src/: CMakeLists.txt
playground/: CMakeLists.txt  playground_test.cpp
